[package]
name = "liquid-dsp-bindings"
version = "0.1.0"
authors = ["Jacob Holtom <jacob@holtom.me>"]
edition = "2018"
description = "These are Rust bindings for liquid-dsp (liquidsdr.org)"
license = "WTFPL"
keywords = ["sdr","dsp","liquid","signal","radio"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/jholtom/liquid-dsp-bindings"

[build-dependencies]
bindgen = "0.50"
