[package]
name = "liquid-dsp-bindings-sys"
version = "0.1.0"
authors = ["Jacob Holtom <jacob@holtom.me>", "Elijah Fry <porkiedev@gmail.com>"]
edition = "2021"
description = "These are the low-level C to Rust bindings for liquid-dsp (liquidsdr.org)"
license = "WTFPL"
keywords = ["sdr","dsp","liquid","signal","radio"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/jholtom/liquid-dsp-bindings-sys"

[build-dependencies]
bindgen = "0.69.2"
